--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
         <meta charset="UTF-8">
         <title>Gary's Website</title> 
         <link rel="stylesheet" href="index.css" type="text/css">
-        <!--This is a place holder if we update this with css later-->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
+        <style>
+            body {
+                font-family: "Roboto Condensed", serif;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+        </style>
         <script>
             is_open = false;
             function showContent() {
@@ -34,25 +42,20 @@
                 <picture>
                     <img src="headshot.jpg" alt="Picture of me" width="200">
                 </picture>
-                <figcaption>
-                    <code>std::cout &lt;&lt; "Hello World!";</code>
-                </figcaption>
             </figure>
-            
+            <div class="intro">
+                <p>
+                    <b>Hi!</b> I'm Gary Simkins. I'm currently a second-year Computer Science major at 
+                    <a href="https://ucsd.edu/">UCSD</a>. I like to play video games (A lot of FPS), 
+                    basketball, and pretty much any type of game you can find. 
+                    Right now I have been trying to work towards creating meaningful projects 
+                    I enjoy in order to hopefully eventually get an internship.
+                </p>
+            </div>
         </header>
         <main>
-            <div class="about-me">
-            <h2>About Me</h2>
-            <p>
-                <b>Hi!</b> I'm Gary Simkins. I'm currently a second-year Computer Science major at 
-                <a href="https://ucsd.edu/">UCSD</a>. I like to play video games (A lot of FPS), 
-                basketball, and pretty much any type of game you can find. 
-                Right now I have been trying to work towards creating meaningful projects 
-                I enjoy in order to hopefully eventually get an internship.
-            </p>
-            </div>
-            <div style="display: inline-flex;">
-                <div class="projects">
+            <div style="display: inline-flex; justify-content: center; width: 100%">
+                <span class="projects">
                     <h2>Projects</h2>
                     <aside>
                         <i>
@@ -64,8 +67,8 @@
                         <li>Pokemon Generator</li>
                         <li>TBD</li>
                     </ol>
-                </div>  
-                <div class="skills">
+                </span>  
+                <span class="skills">
                     <h2>Skills</h2>
                     <ul>
                         <li>Java</li>
@@ -75,7 +78,7 @@
                         <li>CSS</li>
                         <li>Javascript</li>
                     </ul>
-                </div>
+                </span>
             </div>
             <div class="Schedule">
                 <table style="border: solid black;"> 
