Added and moved files to media

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h1>Hello!</h1>
             <figure class="headshot">
                 <picture>
-                    <img src="headshot.jpg" alt="Picture of me" width="200">
+                    <img src="media/headshot.jpg" alt="Picture of me" width="200">
                 </picture>
             </figure>
             <div class="intro">
@@ -252,8 +252,8 @@
                 <figure>
                     <figcaption>A video I took at La Jolla Shores</figcaption>
                     <video controls muted width="500">
-                        <source src="beach_vid.mp4" type="video/mp4">
-                        <source src="beach_vid.mov" type="video/mov">
+                        <source src="media/beach_vid.mp4" type="video/mp4">
+                        <source src="media/beach_vid.mov" type="video/mov">
                     </video>
                 </figure>
                 
@@ -306,7 +306,7 @@
                 <figure>
                     <figcaption>Squirtle Noise (CAUTION: VERY VERY loud)</figcaption>
                     <audio controls muted>
-                        <source src="007-squirtle.mp3"> 
+                        <source src="media/007-squirtle.mp3"> 
                     </audio>
                 </figure>
                 
