Deleted extra media

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="intro">
                 <p>
                     <b>Hi!</b> I'm Gary Simkins. I'm currently a second-year Computer Science major at 
-                    <a href="https://ucsd.edu/">UCSD</a>. I like to play video games (A lot of FPS), 
+                    <a href="https://ucsd.edu/">UCSD</a>. I like to play video games (a lot of FPS), 
                     basketball, and pretty much any type of game you can find. 
                     Right now I have been trying to work towards creating meaningful projects 
                     I enjoy in order to hopefully eventually get an internship.
