Styled info section

--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
             </div>
         </header>
         <main>
-            <div style="display: inline-flex; justify-content: center; width: 100%">
-                <span class="projects">
+            <div class="info">
+                <div class="projects">
                     <h2>Projects</h2>
+                    <hr>
                     <aside>
                         <i>
                             Sadly I have no remarkable projects yet :(. <br>
@@ -67,9 +68,10 @@
                         <li>Pokemon Generator</li>
                         <li>TBD</li>
                     </ol>
-                </span>  
-                <span class="skills">
+                </div>  
+                <div class="skills">
                     <h2>Skills</h2>
+                    <hr>
                     <ul>
                         <li>Java</li>
                         <li>C++</li>
@@ -78,7 +80,7 @@
                         <li>CSS</li>
                         <li>Javascript</li>
                     </ul>
-                </span>
+                </div>
             </div>
             <div class="Schedule">
                 <table style="border: solid black;"> 
