--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
                 align-items: center;
             }
         </style>
+        <!--
+        I accidentally included this in lab 2 so I'm just omitting it for lab 3
         <script>
             is_open = false;
             function showContent() {
@@ -33,7 +35,8 @@
                     ctx.strokeText("Wow you found the secret", 10, 50);
                 }
             }
-            </script>
+        </script>
+        -->
     </head>
     <body>
         <header>
@@ -81,81 +84,6 @@
                         <li>Javascript</li>
                     </ul>
                 </div>
-            </div>
-            <div class="Schedule">
-                <table style="border: solid black;"> 
-                    <caption style="caption-side: bottom;"><strong><i>I also have work that changes everyweek</i></strong></caption>
-                    <colgroup>
-                        <col class="sunday">
-                        <col class="monday">
-                        <col class="tuesday">
-                        <col class="wednesday">
-                        <col class="thursday">
-                        <col class="friday">
-                        <col class="saturday">
-                    </colgroup>
-                    <thead>
-                        <tr>
-                            <th colspan="7"><em>Schedule</em></th>
-                        </tr>
-                        <tr>
-                            <td>Sunday</td>
-                            <td>Monday</td>
-                            <td>Tuesday</td>
-                            <td>Wednesday</td>
-                            <td>Thursday</td>
-                            <td>Friday</td>
-                            <td>Sunday</td>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td> </td>
-                            <td>9am - PHYS2A</td>
-                            <td> </td>
-                            <td>9am - PHYS2A</td>
-                            <td> </td>
-                            <td>9am - PHYS2A</td>
-                            <td> </td>
-                        </tr>
-                        <tr>
-                            <td> </td>
-                            <td>10am - CSE110</td>
-                            <td> </td>
-                            <td>10am - CSE110</td>
-                            <td> </td>
-                            <td>10am - CSE110</td>
-                            <td> </td>
-                        </tr>
-                        <tr>
-                            <td> </td>
-                            <td> </td>
-                            <td>11am - CSE101</td>
-                            <td> </td>
-                            <td>11am - CSE101</td>
-                            <td> </td>
-                            <td> </td>
-                        </tr>
-                        <tr>
-                            <td> </td>
-                            <td> </td>
-                            <td>3pm - CSE110</td>
-                            <td> </td>
-                            <td>3:30pm - PHYS2A</td>
-                            <td> </td>
-                            <td> </td>
-                        </tr>
-                        <tr>
-                            <td> </td>
-                            <td>5pm - CSE105</td>
-                            <td> </td>
-                            <td>5pm - CSE105</td>
-                            <td> </td>
-                            <td>5pm - CSE105</td>
-                            <td> </td>
-                        </tr>
-                    </tbody>
-                </table>
             </div>
             <details class="contact-me">
                 <summary>Contact Me</summary>
@@ -242,15 +170,90 @@
                         <input type="range" min="0" max="100" name="rating-games" id="rating-games">
                     </div>
                     <div class="form-row">
-                        <label for="agreement">By clicking this box I understand that this form actually did nothing and the data will not even be stored.</label>
+                        <label for="agreement">By clicking this box I understand that this form actually did nothing <br>and the data will not even be stored.</label>
                         <input type="checkbox" name="agreement" id="agreement" required>
                     </div>
-                    <input type="reset" value="Reset">
                     <input type="submit" value="Submit">
                 </form>
             </details>
+            <div class="Schedule">
+                <table style="border: solid black;"> 
+                    <caption style="caption-side: bottom;"><strong><i>I also have work that changes everyweek</i></strong></caption>
+                    <colgroup>
+                        <col class="sunday">
+                        <col class="monday">
+                        <col class="tuesday">
+                        <col class="wednesday">
+                        <col class="thursday">
+                        <col class="friday">
+                        <col class="saturday">
+                    </colgroup>
+                    <thead>
+                        <tr>
+                            <th colspan="7"><em>Schedule</em></th>
+                        </tr>
+                        <tr>
+                            <td>Sunday</td>
+                            <td>Monday</td>
+                            <td>Tuesday</td>
+                            <td>Wednesday</td>
+                            <td>Thursday</td>
+                            <td>Friday</td>
+                            <td>Sunday</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td> </td>
+                            <td>9am - PHYS2A</td>
+                            <td> </td>
+                            <td>9am - PHYS2A</td>
+                            <td> </td>
+                            <td>9am - PHYS2A</td>
+                            <td> </td>
+                        </tr>
+                        <tr>
+                            <td> </td>
+                            <td>10am - CSE110</td>
+                            <td> </td>
+                            <td>10am - CSE110</td>
+                            <td> </td>
+                            <td>10am - CSE110</td>
+                            <td> </td>
+                        </tr>
+                        <tr>
+                            <td> </td>
+                            <td> </td>
+                            <td>11am - CSE101</td>
+                            <td> </td>
+                            <td>11am - CSE101</td>
+                            <td> </td>
+                            <td> </td>
+                        </tr>
+                        <tr>
+                            <td> </td>
+                            <td> </td>
+                            <td>3pm - CSE110</td>
+                            <td> </td>
+                            <td>3:30pm - PHYS2A</td>
+                            <td> </td>
+                            <td> </td>
+                        </tr>
+                        <tr>
+                            <td> </td>
+                            <td>5pm - CSE105</td>
+                            <td> </td>
+                            <td>5pm - CSE105</td>
+                            <td> </td>
+                            <td>5pm - CSE105</td>
+                            <td> </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
             <div class="media">
                 <h2>Media</h2>
+                <hr>
                 <figure>
                     <figcaption>A video I took at La Jolla Shores</figcaption>
                     <video controls muted width="500">
