--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                 font-family: "Roboto Condensed", serif;
                 display: flex;
                 flex-direction: column;
+                flex-wrap: nowrap;
                 align-items: center;
             }
         </style>
@@ -55,6 +56,9 @@
                     I enjoy in order to hopefully eventually get an internship.
                 </p>
             </div>
+            <p class="fixed">
+                Have a nice day :)
+            </p>
         </header>
         <main>
             <div class="info">
@@ -327,6 +331,9 @@
                     </span>
                 </div>
             </template>
+            <p style="display: none;">
+                Thank you for grading all our labs :) 
+            </p>
         </footer>
     </body>
 </html>
