--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <hr>
                     <aside>
                         <i>
-                            Sadly I have no remarkable projects yet :(. <br>
+                            Sadly I have no remarkable projects yet.<br>
                             This will be populated more eventually...
                         </i>
                     </aside>
@@ -181,7 +181,7 @@
                 </form>
             </details>
             <div class="Schedule">
-                <table style="border: solid black;"> 
+                <table style="border: solid black; border-width: 4px;"> 
                     <caption style="caption-side: bottom;"><strong><i>I also have work that changes everyweek</i></strong></caption>
                     <colgroup>
                         <col class="sunday">
@@ -194,7 +194,7 @@
                     </colgroup>
                     <thead>
                         <tr>
-                            <th colspan="7"><em>Schedule</em></th>
+                            <th colspan="7">Schedule</th>
                         </tr>
                         <tr>
                             <td>Sunday</td>
