--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </details>
             <div class="Schedule">
                 <table style="border: solid black; border-width: 4px;"> 
-                    <caption style="caption-side: bottom;"><strong><i>I also have work that changes everyweek</i></strong></caption>
+                    <caption style="caption-side: bottom;"><strong><i>I also have work that changes every week.</i></strong></caption>
                     <colgroup>
                         <col class="sunday">
                         <col class="monday">
